book/tests/snapshots/snapshot__run_display_reference_prql@transforms__window-3.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/window-3.prql
---
from employees
group department (
  sort age
  derive rnk = rank
)



